hotbar almost finished

--- a/todo.txt
+++ b/todo.txt
@@ -22,6 +22,8 @@ lots of refactoring (thats what we like to see)
 
 #### day 5
 implemented remaining textures and spritesheets
+began work on hotbar, started with dynamic drawing logic
+moved structs above relevant proc
 
 TODO:
 Start work on inventory system
