--- a/todo.txt
+++ b/todo.txt
@@ -58,14 +58,12 @@ Kinda added contact damage
 #### day 10
 Added a way to return to MainMenu and quit
 Implemented iframe system
+Added a death screen
 
 TODO (order of priority):
-Iframes
-Add a way to quit the game
 Add a basic enemy
     - When within certain range, enemy will track player
     - Contact damage to begin with
-Death screen
 Add wand with basic spell
     - Player has wand
     - It shoots a basic projectile
