--- a/todo.txt
+++ b/todo.txt
@@ -105,5 +105,12 @@ Organised code for Enemy & Spell structs
 Removed pointer in hitbox call
 Added piercing to spells
 
-Debug Menu Overhaul
-    - Implement raygui
+#### day 17
+Fixed enemies not spawning at mp (again)
+Fixed spell type None appending to array
+Implemented some basic raygui for debug menu
+
+
+TODO:
+Merge debug & editor
+Visual effect for different statuses
