--- a/todo.txt
+++ b/todo.txt
@@ -151,15 +151,17 @@ Revised enemy movement and collision with vel, fric, accel
 Enemy collides with tiles
 Other small changes
 
+#### day 23.5
+Random seed with each new save
+
 TODO:
 Seed:
-    - Random seed with each save
+    - Allow for seed input from user
 
 Player:
     - Spell UI 
 
 Enemies:
-    - Collision with tiles
 
 Artwork:
     - Speed plant (increases player movement speed)
